Added flier to homepage+color changes

--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
 </head>
 <body class="flex-container">
   <div class="main">
-    <h1 class="title"><a href="/">Balls 4 Kids</a></h1>
+    <h1 class="title">Balls 4 Kids</h1>
     <div class="bar">
       <div class="pages">
         <a class="nav" href="/">Home</a>
       </div>
     </div>
+    <!-- <div class="flier">
+    </div> -->
     <div class="announcements">
-      <h3>Announcements</h3>
-      <a href="https://instagram.com/balls4kids"><h3>Follow Balls4Kids on Instagram!</h3></a>
+        <a href="https://instagram.com/balls4kids"><img id="flier" src="./static/images/b4k-flier.jpg" ></a>
+        <h3>Announcements</h3>
+        <a href="https://instagram.com/balls4kids"><h3>Follow Balls4Kids on Instagram!</h3></a>
     </div>
-  </div>
+=  </div>
 </body>
 </html>
