Added soccer ball animation

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <body class="flex-container">
   <div class="main">
     <h1 class="title">Balls 4 Kids</h1>
+    <img id="rolling-ball" src="./static/images/soccer-ball1.png"/>
     <div class="bar">
       <div class="pages">
         <a class="nav" href="/">Home</a>
       </div>
     </div>
-    <!-- <div class="flier">
-    </div> -->
+    <div class="flier">
+      <a href="https://instagram.com/balls4kids"><img id="flier" src="./static/images/b4k-flier.jpg" ></a>
+    </div>
     <div class="announcements">
-        <a href="https://instagram.com/balls4kids"><img id="flier" src="./static/images/b4k-flier.jpg" ></a>
-        <h3>Announcements</h3>
-        <a href="https://instagram.com/balls4kids"><h3>Follow Balls4Kids on Instagram!</h3></a>
+      <h3>Announcements</h3>
+      <a href="https://instagram.com/balls4kids"><h3>Follow Balls4Kids on Instagram!</h3></a>
     </div>
 =  </div>
 </body>
