--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!doctype html>
-<html>
+<!-- <html> -->
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Balls4Kids</title>
   <link rel="stylesheet" type="text/css" href="./static/style.css">
 </head>
-<body class="flex-container">
-  <div class="main">
-    <h1 class="title">Balls 4 Kids</h1>
+<body >
+  <div>
+    <div class="header">
+      <!-- <img src="./static/images/B4K - With Circle.png" alt="Balls 4 Kids Logo"> -->
+      <h1><img src="./static/images/B4K - With Circle.png" alt="Balls 4 Kids Logo">
+        Balls 4 Kids</h1>
+    </div>
+    <br/><br/>
     <img id="rolling-ball" src="./static/images/soccer-ball1.png"/>
     <div class="bar">
       <div class="pages">
-        <a class="nav" href="/">Home</a>
+        <!-- <a class="nav" href="/">Home</a> -->
+        <a class="nav-item" href="/"><img src="./static/images/B4K.png"></a>
       </div>
     </div>
     <div class="flier">
@@ -24,4 +30,4 @@
     </div>
 =  </div>
 </body>
-</html>
+<!-- </html> -->
