Minor text/color/speed adjustments

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
   <div>
     <div class="header">
       <!-- <img src="./static/images/B4K - With Circle.png" alt="Balls 4 Kids Logo"> -->
-      <h1><img src="./static/images/B4K - With Circle.png" alt="Balls 4 Kids Logo">
-        Balls 4 Kids</h1>
+      <h1>
+        <img 
+          src="./static/images/B4K - With Circle.png" 
+          alt="Balls 4 Kids Logo"
+        >
+        Balls4Kids</h1>
+          
     </div>
     <br/><br/>
     <img id="rolling-ball" src="./static/images/soccer-ball1.png"/>
