--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Balls4Kids</title>
   <link rel="stylesheet" type="text/css" href="./static/style.css">
+  <link rel="shortcut icon" type="image/png" href="./static/images/soccer-ball1.png"/>
 </head>
 <body >
   <div>
