--- a/public/index.html
+++ b/public/index.html
@@ -25,10 +25,10 @@
 
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root"></div>
-    <video id="video" loop autoplay>
+    <video id="video" loop crossOrigin="anonymous" playsinline style="display:none">
 			<source src="field.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
 		</video>
+    <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
