--- a/public/index.html
+++ b/public/index.html
@@ -20,15 +20,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Balls4Kids</title>
   </head>
 
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <div id="root"></div>
-    <video id="video" loop autoplay>
-			<source src="field.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-		</video>
+    <!-- <video id="video" muted loop crossOrigin="anonymous" playsinline>
+      <source src="field.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'/>
+    </video> -->
+    <div id="root">
+      <img id='B4KCircle' src="%PUBLIC_URL%/B4K - With Circle.png">
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
