use graidnet color + logo

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,12 @@
 
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
-    <video id="video" loop crossOrigin="anonymous" playsinline style="display:none">
-			<source src="field.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-		</video>
+    <video id="video" muted loop crossOrigin="anonymous" playsinline>
+      <source src="field.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'/>
+    </video>
+    <!-- <div id="center-logo"> -->
+      <img id='B4KCircle' src="%PUBLIC_URL%/B4K - With Circle.png">
+    <!-- </div> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
